--- a/stylesheet.css
+++ b/stylesheet.css
@@ -262,37 +262,39 @@ footer {
 @font-face {
   font-family: 'Old Standard TT';
   font-style: normal;
-  font-weight: 400;
-  src: url(res/fonts/OldStandardTT-Regular.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-weight: normal;
+  src: url(res/fonts/OldStandard-Regular.ttf);
 }
 @font-face {
   font-family: 'Old Standard TT';
   font-style: normal;
-  font-weight: 700;
-  src: url(res/fonts/OldStandardTT-Bold.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-weight: bold;
+  src: url(res/fonts/OldStandard-Bold.ttf);
 }
 @font-face {
   font-family: 'Old Standard TT';
   font-style: italic;
-  font-weight: 400;
-  src: url(res/fonts/OldStandardTT-Italic.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-weight: normal;
+  src: url(res/fonts/OldStandard-Italic.ttf);
 }
 /* Google fonts Open Sans */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 600;
-  src: url(res/fonts/OpenSans-Semibold.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+  font-weight: normal;
+  src: url(res/fonts/OpenSans-Regular.ttf);
 }
-/* latin */
+
 @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: url(res/fonts/OpenSans-Semibold_2.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: bold;
+	src: url(res/fonts/OpenSans-Semibold.ttf);
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: italic;
+	font-weight: bold;
+	src: url(res/fonts/OpenSans-Italic.ttf);
 }
