--- a/fonts.css
+++ b/fonts.css
@@ -16,6 +16,7 @@
 @font-face {
     font-family: Roboto;
     src: url(res/fonts/Roboto-Regular.ttf);
+	font-weight: normal;
 }
 @font-face {
     font-family: Roboto;
@@ -27,10 +28,6 @@
     src: url(res/fonts/Roboto-Bold.ttf);
     font-weight: bold;
 }
-@font-face {
-	font-family: Roboto;
-	src: url(res/fonts/Roboto-Light.ttf);
-	font-weight: light;
 	
 /* Old Standard TT */
 @font-face {
