--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,9 +124,11 @@ p {
 	line-height: 1.45em;
 	margin-bottom: 0.15em;
 }
-p img {
-	
+
+.small_description {
+	font-size: 0.8em;
 	}
+
 footer {
 	background: url(res/opacity_bg_70.png) repeat;
 	padding-top: 1em;
