--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 /*MAIN*/
 body { 
-	background-image: url(res/bg_graphingpaper.png);
+	background-image: url(res/bg_test.png);
+	background-repeat: repeat;
 	color: #00000;
 }
 
@@ -26,14 +27,14 @@ img {
 }
 
 header {
-
-	background-image: url(res/opacity_bg_70.png);
+	background-color: #ffffff;
+/* 	background-image: url(res/opacity_bg_70.png); */
 	width: 100%;
-	height: 76px;
+	height: 79px;
 	position: fixed;
 	top: 0;
 	left: 0;
-	border-bottom: 1px solid #000000;
+	border-bottom: 2px solid #4C9CF1;
 	z-index: 100;
 }
 
@@ -47,7 +48,7 @@ header {
 
 nav {
 	vertical-align: center;
-	padding-top: 1em;
+	padding-top: 0.5em;
 	padding-left: 15em;
 	font-family: Open Sans, Droid Sans, Arial, sans-serif;
 }
@@ -74,10 +75,18 @@ nav ul {
 }
 
 nav li {
-
 	display: inline-block;
 	float: left;
 	padding: 1em;
+	font-size: 1.5em;
+}
+
+nav a {
+		color: #000000
+}
+
+nav a:hover {
+	text-decoration: underline;
 }
 
 .current {
