--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,9 @@ header {
 	font-size: 3.4em;
 	font-family: CartoGothic, Arial, sans-serif;
 }
+#logo:hover {
+	text-decoration: underline;
+	}
 
 nav {
 	vertical-align: center;
@@ -135,6 +138,7 @@ p {
 
 .small_description {
 	font-size: 0.8em;
+	margin-left: 1em;
 	}
 
 footer {
@@ -151,7 +155,9 @@ footer {
 	margin-left: 0.5em;
 	float: left;
 	font-family: Open Sans, Arial, sans-serif;
+	color: #444;
 	}
+
 .right_footer {
 	font-size: 0.7em;
 	margin-right: 0.5em;
@@ -161,7 +167,7 @@ footer {
 	}
 
 #contact img {
-	margin-right: 1em;
+	margin-right: 2em;
 	}
 
 #twitter_widget {
