Better lay out for full HD landscape

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,6 +219,15 @@ footer {
 	}
 	
 /*MEDIA QUERY*/
+@media only screen and (min-width : 1400px) {
+	section {
+	margin-left: 5em;
+	}
+	
+	nav {
+	margin-left: 4em;
+	}
+
 @media only screen and (max-width : 1215px) {
 	#twitter_widget {
 		/* display: none; */
