--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,17 +7,13 @@ body {
 }
 
 a {
-
 	color: #4C9CF1;
 	text-decoration: none;
 	font-weight: bold;
-
 }
 
 a:hover {
-
 	color: #444;
-
 }
 
 img {
@@ -210,9 +206,25 @@ footer {
 	line-height: 1.2em;
 	margin-top: 0.9em;
 	}
-	
+
+a#hidden_menu {
+	color: #444;
+	text-decoration: none;
+	font-weight: normal;
+}
+a:hover#hidden_menu {
+	color: #444;
+	text-decoration: none;
+	font-weight: normal;
+}
+
+#hidden_nav {
+	display: none;
+}
+
+
 /*MEDIA QUERY*/
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 685px) {
 	header {
 
 		position: absolute;
@@ -258,7 +270,7 @@ footer {
 	}
 }
 
-@media only screen and (min-width : 1280px) {
+@media only screen and (min-width : 850px) {
 	section {
 	margin-left: 5em;
 	}
