--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,9 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin:0; padding:0; border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent;} body {line-height: 1;}ol, ul{list-style:none;} blockquote, q{quotes:none;} blockquote:before, blockquote:after, q:before, q:after{content:'';content:none;} :focus{outline:0;} ins{text-decoration:none;} del{text-decoration:line-through;} table{border-collapse:collapse; border-spacing:0;}
 
 /*MAIN*/
-body { 
+body {
+	/* For hiding header */
+	padding-top: 40px;
 	background-color: #EBECED;
 }
 
@@ -33,13 +35,17 @@ ul li {
 
 header {
 	background-color: #ffffff;
-/* 	background-image: url(res/opacity_bg_70.png); */
 	width: 100%;
 	height: 79px;
 	position: fixed;
 	top: 0;
 	border-bottom: 2px solid #4C9CF1;
 	z-index: 100;
+	transition: top 0.5s ease-in-out;
+}
+/* To hide header */
+.nav-up {
+  top: -79px; /*same as header height*/
 }
 
 #logo{
