--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /*MAIN*/
 body {
 	/* For hiding header */
-	padding-top: 40px;
 	background-color: #EBECED;
 }
 
@@ -20,7 +19,9 @@ a:hover {
 
 img {
 	max-width: 100%;
-	margin-left: em;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 ul {
@@ -143,8 +144,8 @@ font-size: 1.2em;
 	}
 
 p {
-	line-height: 1.45em;
-	margin-bottom: 0.15em;
+	line-height: 1.5em;
+	margin-bottom: 0.2em;
 }
 
 table, th, td {
@@ -157,7 +158,8 @@ th {
 
 .small_description {
 	font-size: 0.8em;
-	margin-left: 1em;
+	text-align: center;
+	font-weight: bold;
 	}
 
 footer {
@@ -233,8 +235,14 @@ a:hover#hidden_menu {
 	margin-bottom: 4em;
 	width: 28em;
 	}
-	
 
+.teaser_tile {
+	background-color: #EBECED;
+	margin-left: 1em;
+	}
+.teaser_text {
+	font-size: 0.8em;
+	}
 
 /*MEDIA QUERY*/
 @media only screen and (max-width : 685px) {
