Responsive teaser tiles

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -233,12 +233,13 @@ a:hover#hidden_menu {
 	right:15%;
 	top: 6em;
 	margin-bottom: 4em;
-	width: 28em;
+	width: auto;
 	}
 
 .teaser_tile {
 	background-color: #EBECED;
-	margin-left: 1em;
+	margin-right: 1em;
+	padding: 0.3em;
 	}
 .teaser_text {
 	font-size: 0.8em;
@@ -287,6 +288,11 @@ a:hover#hidden_menu {
 		margin-right: 0.5em;
 		padding: 0.5em
 	}
+	
+	.teaser_tile {
+	margin-right: 0em;
+	margin-bottom: 1em;
+	}
 }
 
 @media only screen and (max-width: 1700px) {
@@ -309,8 +315,11 @@ a:hover#hidden_menu {
 	#twitter_widget {
 	float: left;
 	position: relative;
-	left: 15%;
-	top: 0;
+	margin-left: 15%;
+	margin-right: auto;
+	top: -2em;
+	right: 0;
+	left: 0;
 	}
 	
 	section {
@@ -320,16 +329,21 @@ a:hover#hidden_menu {
 }
 
 @media only screen and (max-width: 1024) {
-	#twitter_widget {
-	margin-left: 1em;
-	margin-right: 1em;
-	}
 	
 	section {
 	margin-left: 1em;
 	margin-right: 1em;
 	}
 
+	#twitter_widget {
+	float: left;
+	position: relative;
+	margin-left: 1em;
+	margin-right: 1em;
+	top: 2em;
+	right: 0;
+	left: 0;
+	}
 }
 
 @media only screen and (max-width : 850px) {
@@ -353,8 +367,10 @@ a:hover#hidden_menu {
 	}
 	
 	#twitter_widget {
-	margin-left: 0;
+	display: none;
 	}
 	
+	.teaser_tile {
+	margin-right: 0.5em;
 	}
-
+}
