--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,7 @@ nav {
 	vertical-align: center;
 	text-align: center;
 	margin-top: -0.25em;
-	font-family: Open Sans, Droid Sans, Arial, sans-serif;
+	font-family: 'Asap', Droid Sans, Arial, sans-serif;
 }
 
 #menu-icon {
@@ -125,7 +125,7 @@ section {
 	padding: 2em;
 	font-size: 1em;
 	line-height: 1.15em;
-	font-family: Open Sans, Roboto, Arial, sans-serif;
+	font-family: Asap, Roboto, Arial, sans-serif;
 }
 
 h1 {
@@ -137,15 +137,15 @@ h1 {
 
 h2 {
 	font-size: 1.6em;
-	color: grey;
-	font-family: Old Standard TT;
+	color: black;
+	font-family: Asap;
 	margin-top: 0.5em;
 	}
 	
 h3 {
 font-size: 1.2em;
 	color: #444;
-	font-family: Open Sans;
+	font-family: Asap;
 	margin-left: 0.5em;
 	margin-top: 0.6em;
 	}
@@ -184,7 +184,7 @@ footer {
 	font-size: 0.85em;
 	margin-left: 0.5em;
 	float: left;
-	font-family: Open Sans, Arial, sans-serif;
+	font-family: Asap, Arial, sans-serif;
 	color: #444;
 	}
 
@@ -193,7 +193,7 @@ footer {
 	margin-right: 0.5em;
 	float: right;
 	vertical-align: center;
-	font-family: Open Sans, Arial, sans-serif;
+	font-family: Asap, Arial, sans-serif;
 	}
 
 .sortable {
