--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,7 +102,6 @@ header {
 }
 nav {
 	font-family: 'Asap', Droid Sans, Arial, sans-serif;
-	width: 40em;
 	text-align: center;
 }
 #logo{
@@ -141,18 +140,11 @@ nav a:hover {
 	color: #2262AD;
 }
 #menu-icon {
-	display: hidden;
-	width: 4em;
-	height: 1.9em;
-	background: url(res/expand_icon.png) center;
-	background-repeat:no-repeat;
-	background-size: 3em 3em;
-	border-radius: 3px;
-	margin-top: 2em;
+	display: none;
+	font-size: 1.5em;
+	margin-top: 1em;
+	margin-right: 5%;
 	text-align: right;
-}
-a:hover#menu-icon {
-	background: url(res/expand_icon_hover.png) center;
 }
 
 /* FOOTER */
@@ -294,30 +286,28 @@ sub {
 	/* NAV */
 	#logo{
 		margin-left: 5%;
-		margin-right: 0.5em;
 		margin-top: 0.1em;
 		}
 	#menu-icon {
-		display:inline-block;
+		display:block;
 		float: right;
-		margin-right: 8em;
-	}
+		}
 	nav ul, nav:active ul { 
 		display: none;
 		position: absolute;
-		padding: 20px;
+		padding: 1em;
 		background: #fff;
-		border: 5px solid #444;
+		border: 3px solid #4C9CF1;
+		box-shadow: 5px 5px 5px 3px #bebebe;
 		right: 20px;
 		top: 60px;
 		width: 50%;
-		border-radius: 4px 0 4px 4px;
-	}
+		}
 	nav li {
-		text-align: left;
-		width: 80%;
-		padding: 1em 0;
-		margin: 0;
+		text-align: right;
+		padding: 1em;
+		margin-top: -0.5em;
+		margin-bottom: -0.5em;
 	}
 	nav:hover ul {
 		display: block;
