--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+/*FQDB STYLESHEET V3*/
+
 body {
 	background-color: #EBECED;
 }
@@ -280,6 +282,10 @@ sub {
 	right: 1em;
 	position: absolute;
 	margin-top: -0.5em;
+	}
+
+.slideshow2 img {
+	margin-bottom: 0.5em;
 	}
 	
 /* RESPONSIVE */
