text-align: justify (line stretching)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ section {
 	margin-bottom: 3em;
 	margin-left: auto;
 	margin-right: auto;
+	text-align: justify;
 	max-width: 40em;
 	position: relative;
 	padding-left: 5%;
