--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,3 @@
-/*FQDB STYLESHEET V3*/
-
 body {
 	background-color: #EBECED;
 }
@@ -19,7 +17,7 @@ section {
 	padding-bottom: 1em;
 	font-size: 1em;
 	line-height: 1.15em;
-	font-family: Asap, Roboto, Arial, sans-serif;
+	font-family: sans-serif, Roboto, Arial, sans-serif;
 }
 
 h1 {
@@ -31,7 +29,7 @@ h1 {
 h2 {
 	font-size: 1.6em;
 	color: #0c4f97;
-	font-family: Asap;
+	font-family: sans-serif;
 	margin-top: 0.8em;
 	line-height: 1.1em;
 	margin-bottom: -0.4em;
@@ -40,7 +38,7 @@ h2 {
 h3 {
 font-size: 1.2em;
 	color: #444;
-	font-family: Asap;
+	font-family: sans-serif;
 	margin-left: 0.5em;
 	margin-top: 0.6em;
 	}
@@ -91,6 +89,11 @@ th {
 	top: -1em;
 	bottom: 1em;
 	}
+
+/* TEXT SELECTION COLOUR */	
+::selection {
+    background: #d9eafc;
+}
 
 /* HEADER*/
 header {
@@ -248,13 +251,14 @@ sub {
 	}
 .teaser_tile img {
 	display: none;
+	transition: height 0.5s;
+	transition-delay: 0.1s;
 	}
-#teaser_tile_last {
-	margin-right: 0em;
-	}
+
 .teaser_title {
 	font-weight: bold;
 	color: #0C72DC;
+	font-family: sans-serif;
 	}
 .teaser_text {
 	font-size: 0.9em;
@@ -267,12 +271,11 @@ sub {
 	font-weight: normal;
 	color: black;
 	}
-.teaser_tile:hover img{
+.teaser_tile:hover > img{
 	margin-top: 1em;
 	display: block;
 	max-width: 90%;
-	transition-delay: 0.1s;
-}
+	}
 .teaser_tile:hover {
 	height: 23em;
 	}
