--- a/stylesheet.css
+++ b/stylesheet.css
@@ -260,7 +260,7 @@ sub {
 .teaser_title {
 	font-weight: bold;
 	color: #0C72DC;
-	font-family: sans-serif;
+	font-family: Asap, Roboto, Arial, sans-serif;
 	}
 .teaser_text {
 	font-size: 0.9em;
