--- a/res/video_crop.css
+++ b/res/video_crop.css
@@ -1,23 +1,13 @@
 #CM11_theme_video_wrapper {
-	max-width: 281px;
-	max-height: 500px;
+	max-width: 100%;
+	max-height: 700px;
 	height: auto;
-	overflow:hidden;
 	display: block;
+	width: 400px;
 	margin:auto;
 	}
 
 #CM11_theme_video {
-	margin-left: -297px;
-	max-height: 500px;
-	max-width: 875px;
-	}
-	
-@media only screen and (max-width : 335px) {
-#CM11_theme_video_wrapper {
-
-	}
-
-#CM11_theme_video {
-
+	max-width: 100%;
+	max-height: 700px;
 	}
