--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,11 +36,13 @@ h2 {
 	}
 	
 h3 {
-font-size: 1.2em;
+font-size: 1.4em;
 	color: #444;
 	font-family: Asap, Roboto, Arial, sans-serif;
 	margin-left: 0.5em;
 	margin-top: 0.6em;
+	margin-bottom: -0.6em;
+	margin-top: 0.7em;
 	}
 
 p {
