--- a/stylesheetv2.css
+++ b/stylesheetv2.css
@@ -1,6 +1,5 @@
 body {
-	background-color: #ffcdbe;
-	font-family: Roboto, Helvetica, Arial, sans-serif;
+	background-color: #EBECED;
 }
 
 section {
@@ -18,16 +17,19 @@ section {
 	padding-bottom: 1em;
 	font-size: 1em;
 	line-height: 1.15em;
-	font-family: Roboto, Helvetica, Arial, sans-serif;
+	font-family: Asap, Roboto, Arial, sans-serif;
 }
 
 h1 {
 	font-size: 2em;
+	color: #08325e;
 	line-height: 1.1em;
 }
 
 h2 {
 	font-size: 1.6em;
+	color: #0c4f97;
+	font-family: Asap, Roboto, Arial, sans-serif;
 	margin-top: 0.8em;
 	line-height: 1.1em;
 	margin-bottom: -0.4em;
@@ -35,6 +37,8 @@ h2 {
 	
 h3 {
 font-size: 1.4em;
+	color: #444;
+	font-family: Asap, Roboto, Arial, sans-serif;
 	margin-left: 0.5em;
 	margin-top: 0.6em;
 	margin-bottom: -0.6em;
@@ -62,7 +66,7 @@ p {
 }
 
 a {
-	color: #ff5722;
+	color: #4C9CF1;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -80,7 +84,7 @@ img {
 ul {
 	padding-left: 1em;
 	margin-top: 0.5em;
-	list-style-type: round;
+	list-style-type: square;
 }
 ul li {
 	margin-bottom: 0.3em;
@@ -91,7 +95,7 @@ table, th, td {
 	margin: 0.3em;
 	}
 th {
-	background-color: #ffcdbe;
+	background-color: #4C9CF1;
 	}
 
 .small_description {
@@ -105,7 +109,69 @@ th {
 
 /* TEXT SELECTION COLOUR */	
 ::selection {
-    background: #ffcdbe;
+    background: #d9eafc;
+}
+
+/* HEADER*/
+header {
+	background-color: #ffffff;
+	width: 100%;
+	height: 79px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	border-bottom: 2px solid #4C9CF1;
+	z-index: 100;
+	transition: top 0.5s ease-in-out;
+}
+nav {
+	font-family: Asap, Roboto, Arial, sans-serif;
+	text-align: center;
+	width: 45em;
+	margin: auto;
+	}
+#logo{
+	font-size: 3.4em;
+	font-family: CartoGothic, Asap, Roboto, Arial, sans-serif;
+	float: left;
+	margin-top: -0.2em;
+}
+#logo:hover {
+	text-decoration: underline;
+	}
+/* To hide header */
+.nav-up {
+  top: -79px; /*same as header height*/
+}
+
+	/* MENU */
+nav ul {
+	list-style: none;
+}
+nav li {
+	display: inline;
+	margin-left: 2em;
+	font-size: 1.5em;
+	float: left;
+	margin-top: 0.5em;
+	}
+nav a {
+	color: #2262AD
+}
+nav a:hover {
+	text-decoration: underline;
+}
+.current {
+	color: #2262AD;
+}
+#menu-icon {
+	display: none;
+	max-width: 2.6em;
+	font-size: 1.5em;
+	margin-top: 0.5em;
+	margin-right: 5%;
+	text-align: right;
 }
 
 /* FOOTER */
@@ -183,12 +249,127 @@ sub {
 	padding-bottom: 0.3em;
 	}
 	
+/* TEASER on INDEX */
+#teasers {
+	margin-top: 1em;
+	padding-top: 1em;
+	}
+
+.teaser_tile {
+	background-color: #EBECED;
+	padding: 0.7em;
+	margin: auto;
+	margin-bottom: 1em;
+	height: 4em;
+	transition: height 0.5s; /* Animation time */
+	max-width: 80%;
+	}
+.teaser_tile .img_wrapper {
+	height: 0px;
+	width: 90%;
+	transition: height 0.5s;
+	overflow: hidden;
+	margin: auto;
+	padding-top: 1em;
+	}
+.teaser_title {
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.1em;
+	color: #0C72DC;
+	font-family: Asap, Roboto, Arial, sans-serif;
+	}
+
+#teasers a {
+	font-weight: normal;
+	color: black;
+	}
+.teaser_tile a:hover {
+	font-weight: normal;
+	color: black;
+	}
+.teaser_tile:hover > .img_wrapper{
+	height: 270px;
+	}
+.teaser_tile:hover {
+	height: 23em;
+	}
+
+/* SHARE BUTTONS */
+#share_to {
+	float: right;
+	right: 1em;
+	position: absolute;
+	margin-top: -0.5em;
+	}
+	
 /* RESPONSIVE */
 	/* PHONES */
 @media only screen and (max-width : 43em) {
+	/* NAV */
+	#logo{
+		margin-left: 5%;
+		margin-top: 0.1em;
+		}
+	#menu-icon {
+		display:block;
+		float: right;
+		}
+	#menu-icon:hover {
+		opacity: 0.5;
+		}
+	nav {
+	width: auto;
+	}
+	nav ul, nav:active ul { 
+		display: none;
+		position: absolute;
+		padding: 1em;
+		background: #fff;
+		border: 3px solid #4C9CF1;
+		box-shadow: 5px 5px 5px 3px #bebebe;
+		right: 20px;
+		top: 60px;
+		width: 10em;
+		}
+	nav li {
+		text-align: left;
+		padding: 1em;
+		margin-top: -0.5em;
+		margin-bottom: -0.5em;
+		margin-left: -1em;
+	}
+	nav:hover ul {
+		display: block;
+	}
+	
 	/* FOOTER */
 	.hosted_by {
 		display: none;
+	}
+	
+	/* TEASER TILES */
+	#teasers {
+	padding: 0em;
+	padding-top: 0.1em;
+	}
+	.teaser_tile {
+	height: auto;
+	width: 100%;
+	}
+	.teaser_tile .img_wrapper{
+	height: auto;
+	max-width: 100%;
+	padding: 0.2em;
+	overflow: visible;
+	margin-bottom: 1em;
+	}
+	.teaser_tile:hover {
+	height: auto;
+	}
+
+	.teaser_tile:hover > .img_wrapper {
+	height: auto;
 	}
 	
 	/* WIDE TABLES */
@@ -217,4 +398,8 @@ sub {
 		margin-left: 0.5em;
 		background-color: #b4d5f9;
 		}
+	/* SHARING */
+	#share_to {
+		display: none;
+	}
 }
