--- a/stylesheet_indexv3.css
+++ b/stylesheet_indexv3.css
@@ -25,6 +25,7 @@ body {
 p {
 	font-size: 1.2em;
 	max-width: 40em;
+	margin-left: 1.5em;
 }
 
 #home_menu {
@@ -48,7 +49,6 @@ p {
 .expand {
 	display: none;
 	position: absolute;
-	font-size: 1.5em;
 	margin-left: 15em;
 	margin-top: -9.6em;/* 3.2em per menu item */
 	font-size: 1em;
@@ -75,7 +75,7 @@ p {
 	background: #aaa;
 }
 #resume_expand {
-	font-size: 1em;
+	font-size: 0.9em;
 	width: 40em;
 	max-width: 70%;
 	padding-left: 1em;
@@ -96,6 +96,7 @@ footer {
 	width: 100%;
 	border-top: 1px solid white;
 	font-size:0.8em;
+	z-index: -99;
 }
 
 ::selection {
@@ -105,35 +106,54 @@ footer {
 /* RESPONSIVE */
 	/* PHONES */
 @media only screen and (max-width : 37.5em) {
-#title {
-	font-size: 3em;
-}
-#home_menu {
-	max-width: 100%;
-}
-#home_menu > a > div {
-	margin-left: 0em;
-}	
-	
-.expand {
-	position: relative;
-	margin-top: 0em;
-	margin-left: 0em;
-	max-width: 100%;
-	padding: 0.3em;
-}
-#resume_expand {
-	width: 100%;
-	max-width: 100%;
-}
-.spotlight {
-	width: 100%;
-	text-align: center;
-	margin-top: 0.5em;
-	height: auto;
-}
-.spotlight img,video {
-	margin-top: 0.5em;
-	max-width: 100%;
-}
+	p {
+		margin-left: 0;
+	}
+	#title {
+		font-size: 3em;
+	}
+	#home_menu {
+		max-width: 100%;
+	}
+	#home_menu > a > div {
+		margin-left: 0em;
+	}	
+
+	.expand {
+		position: relative;
+		margin-top: 0em;
+		margin-left: 0em;
+		margin: 0em;
+		width: 100%;
+		padding: 0.8em;
+		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+		box-sizing: border-box;         /* Opera/IE 8+ */
+	}
+	#contact_expand {
+		width: 100%;
+		height: auto;
+	}
+	#resume_expand {
+		width: 100%;
+		max-width: 100%;
+	}
+	.spotlight a {
+		text-decoration: underline;
+		
+	}
+	.spotlight {
+		width: 100%;
+		text-align: center;
+		margin-top: 0.5em;
+		height: auto;
+		border-bottom: 4px solid #ff5722;
+		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+		box-sizing: border-box;         /* Opera/IE 8+ */
+	}
+	.spotlight img,video {
+		margin-top: 0.5em;
+		max-width: 100%;
+	}
 }
