--- a/header.css
+++ b/header.css
@@ -1,16 +1,3 @@
-#logo {
-	font-size: 3em;
-	font-family: CartoGothic, Asap, Calibri, sans-serif;
-	margin-top: 0.2em;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-/* HEADER*/
 header {
 	background-color: #ffffff;
 	width: 100%;
@@ -28,46 +15,34 @@ nav {
 	width: 40em;;
 	height: 100%;
 	margin: auto;
-	border: 1px dotted black;
 	text-align: left;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: #444
 }
 
 #logo {
 	font-size: 3em;
-	font-family: CartoGothic, Asap, Roboto, Arial, sans-serif;
-	color: black;
+	font-family: CartoGothic, Asap, Calibri, sans-serif;
+	margin-top: 0.2em;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	}
+#back_home {
+	font-size: 0.8em;
+	font-weight: normal;
 }
 
 /* To hide header */
 .nav-up {
   top: -79px; /*same as header height*/
-}
-
-	/* MENU */
-nav ul {
-	list-style: none;
-}
-nav li {
-	display: inline;
-	margin-left: 2em;
-	font-size: 1.5em;
-	float: left;
-	margin-top: 0.5em;
-	}
-nav a {
-	color: #2262AD
-}
-nav a:hover {
-	text-decoration: underline;
-}
-.current {
-	color: #2262AD;
-}
-#menu-icon {
-	display: none;
-	max-width: 2.6em;
-	font-size: 1.5em;
-	margin-top: 0.5em;
-	margin-right: 5%;
-	text-align: right;
 }
