--- a/header.css
+++ b/header.css
@@ -18,11 +18,11 @@ nav {
 	text-align: left;
 }
 
-a {
+nav a {
 	color: black;
 	text-decoration: none;
 }
-a:hover {
+nav a:hover {
 	color: #444
 }
 
