--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,7 @@ p {
 
 a {
 	color: #ff5722;
-	text-decoration: none;
+	text-decoration: underline;
 	font-weight: bold;
 }
 a:hover {
@@ -108,43 +108,6 @@ th {
     background: #ffcdbe;
 }
 
-/* FOOTER */
-footer {
-	/* background: url(res/opacity_bg_70.png) repeat; */
-	background: white;
-	opacity: 70;
-	padding-top: 1em;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 0.7em;
-	transition: top 0.5s ease-in-out;
-	}
-.left_footer {
-	font-size: 0.85em;
-	margin-left: 0.5em;
-	margin-top: -.7em;
-	float: left;
-	font-family: Asap, Roboto, Arial, sans-serif;
-	color: #444;
-	}
-.right_footer {
-	font-size: 0.85em;
-	margin-right: 0.5em;
-	margin-top: -1em;
-	float: right;
-	vertical-align: center;
-	font-family: Asap, Roboto, Arial, sans-serif;
-	}
-.right_footer:hover {
-	opacity: 0.7;
-	}
-/* to hide footer */
-.nav-up-footer {
-  top: -5em;
-}
-
 /* Fix sub and sup */
 sub, sup {
   /* Specified in % so that the sup/sup is the right size relative to the surrounding text */
@@ -186,11 +149,6 @@ sub {
 /* RESPONSIVE */
 	/* PHONES */
 @media only screen and (max-width : 43em) {
-	/* FOOTER */
-	.hosted_by {
-		display: none;
-	}
-	
 	/* WIDE TABLES */
 	.wide_table table, thead, tbody, th, td, tr  {
 		display: block; 
