--- a/header-old.css
+++ b/header-old.css
@@ -5,10 +5,10 @@ header {
 	position: fixed;
 	top: 0;
 	left: 0;
+	right: 0;
 	border-bottom: 2px solid #ff5722;
 	z-index: 100;
 	transition: top 0.5s ease-in-out;
-	text-align: center;
 }
 nav {
 	text-align: center;
@@ -23,12 +23,11 @@ nav a {
 	text-decoration: none;
 }
 nav a:hover {
-	color: #444;
-	text-decoration: underline;
+	color: #444
 }
 
 #logo {
-	font-size: 3.5em;
+	font-size: 3em;
 	font-family: CartoGothic, Asap, Calibri, sans-serif;
 	margin-top: 0.2em;
 	-webkit-touch-callout: none;
@@ -38,35 +37,12 @@ nav a:hover {
 	-ms-user-select: none;
 	user-select: none;
 	}
-.nav_btn {
-	display:inline-block;
-	padding-left: 1em;
-	font-size: 1.5em;
+#back_home {
+	font-size: 0.8em;
+	font-weight: normal;
 }
 
 /* To hide header */
 .nav-up {
   top: -79px; /*same as header height*/
-}
-
-/* RESPONSIVE */
-	/* PHONES */
-@media only screen and (max-width : 43em) {
-	header {
-		height: 135px;
-	}
-	.nav-up {
-		top: -135px; /*same as header height*/
-	}
-	section {
-		margin-top: 10em;
-	}
-	#logo {
-		font-size: 2.8em;
-	}
-	.nav_btn {
-		display:block;
-		border-top: 1px solid #444;
-		padding: 0.2em;
-	}
 }
