--- a/denmark.css
+++ b/denmark.css
@@ -46,3 +46,14 @@ img, iframe{
 td:nth-child(1) {  
   padding-right: 1em;
 }
+
+@media screen and (max-width: 1100px) {
+	section {
+		max-width: 90%;
+		padding: 1em;
+		padding-top: 1em;
+		border-left: 2px solid #DB0006;
+		border-right: 2px solid #DB0006;
+		background-color: white;
+	}
+}
