--- a/page/denmark/denmark.css
+++ b/page/denmark/denmark.css
@@ -7,7 +7,7 @@ body {
 }
 
 section {
-	width: 55em;
+	width: 48em;
 	margin: auto;
 	margin-top: 6em;
 	padding: 2em;
@@ -23,6 +23,7 @@ h1 {
 }
 h2 {
 	font-size: 1.8em;
+	margin-bottom: -0.5em;
 }
 
 p {
@@ -42,6 +43,15 @@ a:hover {
 img, iframe{
 	max-width: 100%;
 }
+
+.small_description {
+	font-size: 0.8em;
+	text-align: center;
+	font-weight: bold;
+	display: block;
+	top: -1em;
+	bottom: 1em;
+	}
 
 td:nth-child(1) {  
   padding-right: 1em;
