--- a/page/denmark/denmark.css
+++ b/page/denmark/denmark.css
@@ -40,8 +40,11 @@ a:hover {
 	color: #444;
 }
 
-img, iframe{
+img, iframe {
 	max-width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .small_description {
