--- a/stylesheet_indexv3.css
+++ b/stylesheet_indexv3.css
@@ -36,8 +36,10 @@ body > p {
 	margin-left: 1.5em;
 }
 h2{
-	border-bottom: 3px solid #607d8b;
 	margin-bottom: -0.3em;
+}
+#resume_expand h2 {
+	border-bottom: 3px solid #607d8b;
 }
 h3 {
 	margin-bottom: -0.5em;
