--- a/page/cloud-comparison.css
+++ b/page/cloud-comparison.css
@@ -1,6 +1,9 @@
 #main {
 	margin-top: 6em;
-	font-family: Roboto, Arial, Helvetica, sans-serif;
+	font-family: PT Serif, Cambria, Georgia, Linux Libertine, serif;
+}
+h1, h2, h3, h4 {
+	text-align: left;
 }
 .text {
 	max-width: 100%;
@@ -8,6 +11,10 @@
 	text-align: justify;
 	font-size: 13pt;
 	margin: auto;
+	border: 3px solid #ff5722;
+	padding: 1em;
+	box-sizing: border-box;
+	margin-bottom: 1em;
 }
 
 #names {
